[package]
name = "be-server"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.7"
serde = { version = "1.0.228", features = ["serde_derive"] }
sqlx = {version = "0.8.6",features = ["postgres", "runtime-tokio-rustls"]}
tokio = { version = "1.48.0", features = ["full"] }
tower-http = { version = "0.6.7", features = ["cors"] }
dotenv = "0.15.0"
async-trait = "0.1.89"
sqlx-cli = "0.8.6"
